--- a/.gitmodules
+++ b/.gitmodules
@@ -23,5 +23,5 @@
 	path = auth
 	url = https://github.com/gameontext/gameon-auth.git
 [submodule "auth-spring-social"]
-	path = auth
+	path = auth-spring-social
 	url = https://github.com/gameontext/gameon-auth-spring-social.git	
