Add spring social auth module (#129)
* Add Spring Social Auth

* Correct submodule path

* add auth module

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "auth"]
 	path = auth
 	url = https://github.com/gameontext/gameon-auth.git
+[submodule "auth-spring-social"]
+	path = auth-spring-social
+	url = https://github.com/gameontext/gameon-auth-spring-social.git
