Istio, Iteration instructions
Sort out bringup with Istio (incomplete metadata, but closer)
Updated metadata for kafka (imagePullPolicy) for localdev
Updated instructions for iteration w/ minikube and helm
alongside docker-for-desktop

rebuilt k8s scripts for smooth up/down with
and without istio (make clearer functions and flow).

Updated templates for w/ and w/o helm or istio

Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ gameon.?*env
 docker-compose.override.yml
 kubernetes/kubectl/configmap.yaml
 kubernetes/kubectl/ingress.yaml
+kubernetes/istio/istio-gateway.yaml
 kubernetes/chart/gameon-system/values.yaml
 slackin
 scratch
+.vscode
