--- a/.editorconfig
+++ b/.editorconfig
@@ -18,5 +18,8 @@ trim_trailing_whitespace = false
 [*.java]
 indent_size = 4
 
-[*.{html,js,rb,css,xml,sh,yaml,yml}]
+[*.{yaml,yml}]
+indent_size = 2
+
+[*.{html,js,rb,css,xml,sh}]
 indent_size = 2
