--- a/kubernetes/chart/gameon-system/templates/ingress.yaml
+++ b/kubernetes/chart/gameon-system/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.ingress.enabled }}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -36,4 +37,4 @@ spec:
             servicePort: {{ .servicePort }}
         {{- end }}
         {{- end }}
-
+{{- end }}
