Docker: LOG_FORMAT, gameon-util image

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -125,6 +125,7 @@ services:
   util:
     build:
       context: ../images/util
+    image: gameon-util
     command: tail -f /dev/null
     volumes:
       - 'keystore:/keystore'
