--- a/docker/gameon.env
+++ b/docker/gameon.env
@@ -19,6 +19,7 @@ MESSAGEHUB_PASSWORD=
 #####################################
 GAMEON_MODE=development
 TARGET_PLATFORM=local
+LOG_FORMAT=json
 SYSTEM_ID=game-on.org
 ADMIN_PASSWORD=admin
 MAP_KEY=fish
