--- a/docker/docker-compose.override.yml.example
+++ b/docker/docker-compose.override.yml.example
@@ -3,6 +3,7 @@ version: '2.1'
 services:
 
 #  auth:
+#    image: gameontext/gameon-auth:latest
 #    build:
 #      context: ../auth/auth-wlpcfg
 #    ports:
@@ -13,6 +14,7 @@ services:
 #      - '../auth/auth-wlpcfg/servers/gameon-auth:/opt/ol/wlp/usr/servers/defaultServer'
 
 #  map:
+#    image: gameontext/gameon-map:latest
 #    build:
 #      context: ../map/map-wlpcfg
 #    ports:
@@ -23,6 +25,7 @@ services:
 #      - '../map/map-wlpcfg/servers/gameon-map:/opt/ol/wlp/usr/servers/defaultServer'
 
 #  mediator:
+#    image: gameontext/gameon-mediator:latest
 #    build:
 #      context: ../mediator/mediator-wlpcfg
 #    ports:
@@ -33,6 +36,7 @@ services:
 #      - '../mediator/mediator-wlpcfg/servers/gameon-mediator:/opt/ol/wlp/usr/servers/defaultServer'
 
 #  player:
+#    image: gameontext/gameon-player:latest
 #    build:
 #      context: ../player/player-wlpcfg
 #    ports:
@@ -43,12 +47,14 @@ services:
 #      - '../player/player-wlpcfg/servers/gameon-player:/opt/ol/wlp/usr/servers/defaultServer'
 
 #  proxy:
+#    image: gameontext/gameon-proxy:latest
 #    build:
 #      context: ../proxy
 #    ports:
 #      - "1936:1936"
 
 #  room:
+#    image: gameontext/gameon-room:latest
 #    build:
 #      context: ../room/room-wlpcfg
 #    ports:
@@ -59,12 +65,14 @@ services:
 #      - '../room/room-wlpcfg/servers/gameon-room:/opt/ol/wlp/usr/servers/defaultServer'
 
 #  swagger:
+#    image: gameontext/gameon-swagger:latest
 #    build:
 #      context: ../swagger
 #    ports:
 #      - "8081:8080"
 
 #  webapp:
+#    image: gameontext/gameon-webapp:latest
 #    build:
 #      context: ../webapp
 #    ports:
