--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -174,6 +174,19 @@ services:
     networks:
       - gameontext
 
+#### Local Zipkin Service for OpenTracing #########
+  zipkin:
+    image: openzipkin/zipkin
+    ports:
+      - "9411:9411"
+    container_name: zipkin
+    healthcheck:
+      test: curl http://localhost:9411/
+      timeout: 10s
+      retries: 3
+    networks:
+      - gameontext
+
 networks:
   gameontext:
 
