--- a/kubernetes/chart/gameon-system/templates/coreservice.yaml
+++ b/kubernetes/chart/gameon-system/templates/coreservice.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .serviceName }}-service
+  name: {{ .serviceName }}
   namespace: gameon-system
   labels:
     app: {{ $.Chart.Name }}-{{ .serviceName }}
