--- a/kubernetes/chart/gameon-system/templates/kafka.yaml
+++ b/kubernetes/chart/gameon-system/templates/kafka.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kafka-service
+  name: kafka
   namespace: gameon-system
   labels:
     app: {{ .Chart.Name }}-kafka
