--- a/kubernetes/kubectl/map.yaml
+++ b/kubernetes/kubectl/map.yaml
@@ -16,7 +16,7 @@ spec:
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: map
+  name: map-deploy
   namespace: gameon-system
   labels:
     app: gameon-map
@@ -31,11 +31,12 @@ spec:
         secret:
           secretName: global-cert
       containers:
-      - image: gameontext/gameon-map:lastgood
-        name: map
+      - name: map
+        image: gameontext/gameon-map:lastgood
+        imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 9080
-          name: map
+        - name: map
+          containerPort: 9080
         readinessProbe:
           httpGet:
             path: /map/v1/health
