--- a/kubernetes/kubectl/room.yaml
+++ b/kubernetes/kubectl/room.yaml
@@ -16,7 +16,7 @@ spec:
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: room
+  name: room-deploy
   namespace: gameon-system
   labels:
     app: gameon-room
@@ -31,11 +31,12 @@ spec:
         secret:
           secretName: global-cert
       containers:
-      - image: gameontext/gameon-room:lastgood
-        name: room
+      - name: room
+        image: gameontext/gameon-room:lastgood
+        imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 9080
-          name: room
+        - name: room
+          containerPort: 9080
         readinessProbe:
           httpGet:
             path: /
