--- a/kubernetes/kubectl/mediator.yaml
+++ b/kubernetes/kubectl/mediator.yaml
@@ -25,6 +25,8 @@ spec:
     metadata:
       labels:
         app: gameon-mediator
+      annotations:
+        traffic.sidecar.istio.io/includeOutboundIPRanges: 10.0.0.1/24
     spec:
       volumes:
       - name: certificate
