--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ docker-compose.override.yml
 kubernetes/kubectl/configmap.yaml
 kubernetes/kubectl/couchdb-pv.yaml
 kubernetes/kubectl/ingress.yaml
+kubernetes/kubectl/mediator.yaml
 kubernetes/istio/istio-gateway.yaml
 kubernetes/chart/gameon-system/values.yaml
 slackin
