--- a/kubernetes/chart/gameon-system/templates/coredeployment.yaml
+++ b/kubernetes/chart/gameon-system/templates/coredeployment.yaml
@@ -1,3 +1,4 @@
+{{- $iprange := .Values.global.includeIPRanges }}
 {{- range .Values.coreServices }}
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -10,6 +11,10 @@ metadata:
 spec:
   template:
     metadata:
+{{- if eq .serviceName "mediator" }}
+      annotations:
+        traffic.sidecar.istio.io/includeOutboundIPRanges: {{ $iprange }}
+{{- end }}
       labels:
         app: {{ $.Chart.Name }}-{{ .serviceName }}
     spec:
@@ -37,6 +42,8 @@ spec:
             - name: certificate
               mountPath: /etc/cert
           envFrom:
+            - secretRef:
+                name: gameon-system-global-secret
             - configMapRef:
                 name: gameon-system-global-config
           {{- if .configMapRef }}
