--- a/kubernetes/kubectl/room.yaml
+++ b/kubernetes/kubectl/room.yaml
@@ -48,3 +48,5 @@ spec:
         envFrom:
         - configMapRef:
             name: global-config
+        - secretRef:
+            name: global-secret
