--- a/kubernetes/kubectl/room.yaml
+++ b/kubernetes/kubectl/room.yaml
@@ -13,7 +13,7 @@ spec:
   selector:
     app: gameon-room
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: room-deploy
@@ -21,6 +21,10 @@ metadata:
   labels:
     app: gameon-room
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: gameon-room
   template:
     metadata:
       labels:
