first pass at updates

--- a/docker/gameon.env
+++ b/docker/gameon.env
@@ -41,3 +41,4 @@ FRONT_END_SUCCESS_CALLBACK=https://127.0.0.1/#/login/callback
 FRONT_END_FAIL_CALLBACK=https://127.0.0.1/#/login?login_failed
 # Base URL used for OAuth provider flow
 FRONT_END_AUTH_URL=https://127.0.0.1/auth
+FRONT_END_DUMMY_AUTH_URL=https://dummy.127.0.0.1.xip.io/auth
