--- a/kubernetes/.template.kubectl.ingress.yaml
+++ b/kubernetes/.template.kubectl.ingress.yaml
@@ -12,6 +12,7 @@ spec:
 # TLS block causes automatic redirection of http -> https
   tls:
   - hosts:
+    - GAMEON_DUMMY_INGRESS
     - GAMEON_INGRESS
     secretName: GAMEON_INGRESS_SECRET
   rules:
@@ -42,3 +43,10 @@ spec:
         backend:
           serviceName: swagger
           servicePort: 8080
+  - host: GAMEON_DUMMY_INGRESS
+    http:
+      paths:
+      - path: /auth
+        backend:
+          serviceName: auth
+          servicePort: 9080          
