--- a/kubernetes/chart/gameon-system/templates/configmap/auth-config.yaml
+++ b/kubernetes/chart/gameon-system/templates/configmap/auth-config.yaml
@@ -13,3 +13,4 @@ data:
   FRONT_END_SUCCESS_CALLBACK: https://{{ .Values.global.frontDoor }}/#/login/callback
   FRONT_END_FAIL_CALLBACK: https://{{ .Values.global.frontDoor }}/#/login?login_failed
   FRONT_END_AUTH_URL: https://{{ .Values.global.frontDoor }}/auth
+  FRONT_END_DUMMY_AUTH_URL: https://{{ .Values.global.frontDoorAltHost }}/auth
