--- a/kubernetes/.template.values.yaml
+++ b/kubernetes/.template.values.yaml
@@ -8,7 +8,7 @@ global:
     MAP_SERVICE_URL: http://map.gameon-system.svc.cluster.local:9080/map/v1/sites
     MAP_HEALTH_SERVICE_URL: http://map.gameon-system.svc.cluster.local:9080/map/v1/health
     PLAYER_SERVICE_URL: http://player.gameon-system.svc.cluster.local:9080/players/v1/accounts
-    RECROOM_SERVICE_URL: wss://GAME_FRONT_DOOR/rooms
+    RECROOM_SERVICE_URL: ws://room.gameon-system.svc.cluster.local:9080/rooms
 # Global: Common backing services
     COUCHDB_USER: mapUser
     COUCHDB_PASSWORD: myCouchDBSecret
