Updates for new auth

--- a/kubernetes/.template.kubectl.configmap.yaml
+++ b/kubernetes/.template.kubectl.configmap.yaml
@@ -26,15 +26,15 @@ data:
   SWEEP_ID: sweep
   SWEEP_SECRET: sweepSecret
 # Auth service environment variables
-  FACEBOOK_APP_ID: ''
-  FACEBOOK_APP_SECRET: ''
-  GITHUB_APP_ID: ''
-  GITHUB_APP_SECRET: ''
-  GOOGLE_APP_ID: ''
-  GOOGLE_APP_SECRET: ''
-  TWITTER_CONSUMER_KEY: ''
-  TWITTER_CONSUMER_SECRET: ''
+  FACEBOOK_APP_ID: 'x'
+  FACEBOOK_APP_SECRET: 'x'
+  GITHUB_APP_ID: 'x'
+  GITHUB_APP_SECRET: 'x'
+  GOOGLE_APP_ID: 'x'
+  GOOGLE_APP_SECRET: 'x'
+  TWITTER_CONSUMER_KEY: 'x'
+  TWITTER_CONSUMER_SECRET: 'x'
   FRONT_END_SUCCESS_CALLBACK: https://GAME_FRONT_DOOR/#/login/callback
   FRONT_END_FAIL_CALLBACK: https://GAME_FRONT_DOOR/#/login?login_failed
   FRONT_END_AUTH_URL: https://GAME_FRONT_DOOR/auth
-  FRONT_END_DUMMY_AUTH_URL: https://GAMEON_DUMMY_INGRESS/auth
+  FRONT_END_DUMMY_AUTH_URL: https://GAMEON_DUMMY/auth
