--- a/docker/gameon.env
+++ b/docker/gameon.env
@@ -28,17 +28,17 @@ SWEEP_SECRET: sweepSecret
 
 # Auth service environment variables
 #####################################
-FACEBOOK_APP_ID=
-FACEBOOK_APP_SECRET=
-GITHUB_APP_ID=
-GITHUB_APP_SECRET=
-GOOGLE_APP_ID=
-GOOGLE_APP_SECRET=
-TWITTER_CONSUMER_KEY=
-TWITTER_CONSUMER_SECRET=
+FACEBOOK_APP_ID=x
+FACEBOOK_APP_SECRET=x
+GITHUB_APP_ID=x
+GITHUB_APP_SECRET=x
+GOOGLE_APP_ID=x
+GOOGLE_APP_SECRET=x
+TWITTER_CONSUMER_KEY=x
+TWITTER_CONSUMER_SECRET=x
 # Callbacks: redirect back to browser after login
-FRONT_END_SUCCESS_CALLBACK=https://127.0.0.1/#/login/callback
-FRONT_END_FAIL_CALLBACK=https://127.0.0.1/#/login?login_failed
+FRONT_END_SUCCESS_CALLBACK=https://gameon.127.0.0.1.xip.io/#/login/callback
+FRONT_END_FAIL_CALLBACK=https://gameon.127.0.0.1.xip.io/#/login?login_failed
 # Base URL used for OAuth provider flow
-FRONT_END_AUTH_URL=https://127.0.0.1/auth
+FRONT_END_AUTH_URL=https://gameon.127.0.0.1.xip.io/auth
 FRONT_END_DUMMY_AUTH_URL=https://dummy.127.0.0.1.xip.io/auth
