--- a/docker/gameon.env
+++ b/docker/gameon.env
@@ -28,6 +28,11 @@ SWEEP_SECRET: sweepSecret
 
 # Auth service environment variables
 #####################################
+# (Note, these can't be empty, as an empty var is stil
+#  a defined var, and a defined var means spring will
+#  try to use the value, which leads to the auth service
+#  being unable to start, as it cannot tolerate empty 
+#  values being used.)
 FACEBOOK_APP_ID=x
 FACEBOOK_APP_SECRET=x
 GITHUB_APP_ID=x
