--- a/kubernetes/.template.values.yaml
+++ b/kubernetes/.template.values.yaml
@@ -28,6 +28,11 @@ global:
 
 auth:
   data:
+# (Note, these can't be empty, as an empty var is stil
+#  a defined var, and a defined var means spring will
+#  try to use the value, which leads to the auth service
+#  being unable to start, as it cannot tolerate empty 
+#  values being used.)
     FACEBOOK_APP_ID: 'x'
     FACEBOOK_APP_SECRET: 'x'
     GITHUB_APP_ID: 'x'
