Add openshift, update k8s, istio, helm, etc (#152)
* first pass at updates

* Fix ingress template, fix placeholder substitution

* Update Helm to helm 3.0

* update istio virtualservice

* Add missing disable for routes with helm/istio

* revert room to use cluster internal url

* Updates for new auth

* Move couch to 2.3.1 (tolerates non-root)

* Move docker to using gameon.IPADDRESS.xip.io

* also mount certs at new auth location

* Whitespace/comments

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     image: gameontext/gameon-auth:lastgood
     volumes:
       - 'keystore:/opt/ol/wlp/usr/servers/defaultServer/resources/security'
+      - 'keystore:/etc/certs'
     depends_on:
       kafka:
         condition: service_healthy
@@ -161,7 +162,7 @@ services:
 
 #### Local CouchDb Backend #########
   couchdb:
-    image: couchdb:2.2
+    image: couchdb:2.3.1
     volumes:
       - 'keystore:/etc/cert'
       - 'couchdb-data:/opt/couchdb/data'
