--- a/docker/gameon.env
+++ b/docker/gameon.env
@@ -4,7 +4,7 @@ MAP_SERVICE_URL=http://map:9080/map/v1/sites
 MAP_HEALTH_SERVICE_URL=http://map:9080/map/v1/health
 PLAYER_SERVICE_URL=http://player:9080/players/v1/accounts
 RECROOM_SERVICE_URL=ws://room:9080/rooms
-
+#
 # Global: Common backing services
 #####################################
 COUCHDB_SERVICE_URL=http://couchdb:5984
@@ -14,7 +14,7 @@ COUCHDB_PASSWORD=myCouchDBSecret
 KAFKA_SERVICE_URL=kafka:9092
 MESSAGEHUB_USER=
 MESSAGEHUB_PASSWORD=
-
+#
 # Global configuration vars for running locally
 #####################################
 GAMEON_MODE=development
@@ -23,16 +23,16 @@ GAMEON_LOG_FORMAT=json
 SYSTEM_ID=game-on.org
 ADMIN_PASSWORD=admin
 MAP_KEY=fish
-SWEEP_ID: sweep
-SWEEP_SECRET: sweepSecret
-
+SWEEP_ID=sweep
+SWEEP_SECRET=sweepSecret
+#
 # Auth service environment variables
 #####################################
 # (Note, these can't be empty, as an empty var is stil
-#  a defined var, and a defined var means spring will
-#  try to use the value, which leads to the auth service
-#  being unable to start, as it cannot tolerate empty 
-#  values being used.)
+# a defined var, and a defined var means spring will
+# try to use the value, which leads to the auth service
+# being unable to start, as it cannot tolerate empty
+# values being used.)
 FACEBOOK_APP_ID=x
 FACEBOOK_APP_SECRET=x
 GITHUB_APP_ID=x
