cleanup env vars

--- a/docker/gameon.env
+++ b/docker/gameon.env
@@ -12,15 +12,13 @@ COUCHDB_HOST_AND_PORT=couchdb:5984
 COUCHDB_USER=mapUser
 COUCHDB_PASSWORD=myCouchDBSecret
 KAFKA_SERVICE_URL=kafka:9092
-MESSAGEHUB_USER=
-MESSAGEHUB_PASSWORD=
 #
 # Global configuration vars for running locally
 #####################################
 GAMEON_MODE=development
 TARGET_PLATFORM=local
 GAMEON_LOG_FORMAT=json
-SYSTEM_ID=game-on.org
+SYSTEM_ID=gameontext.org
 ADMIN_PASSWORD=admin
 MAP_KEY=fish
 SWEEP_ID=sweep
