Fix swagger healthcheck path

--- a/kubernetes/.template.values.yaml
+++ b/kubernetes/.template.values.yaml
@@ -104,7 +104,7 @@ coreServices:
   path: /swagger/
   image: gameontext/gameon-swagger:lastgood
   readinessProbe:
-    path: /
+    path: /health
     initialDelaySeconds: 40
 # room service
 - serviceName: room
