--- a/docker/gameon.env
+++ b/docker/gameon.env
@@ -40,8 +40,8 @@ GOOGLE_APP_SECRET=x
 TWITTER_CONSUMER_KEY=x
 TWITTER_CONSUMER_SECRET=x
 # Callbacks: redirect back to browser after login
-FRONT_END_SUCCESS_CALLBACK=https://gameon.127.0.0.1.xip.io/#/login/callback
-FRONT_END_FAIL_CALLBACK=https://gameon.127.0.0.1.xip.io/#/login?login_failed
+FRONT_END_SUCCESS_CALLBACK=https://gameon.127.0.0.1.nip.io/#/login/callback
+FRONT_END_FAIL_CALLBACK=https://gameon.127.0.0.1.nip.io/#/login?login_failed
 # Base URL used for OAuth provider flow
-FRONT_END_AUTH_URL=https://gameon.127.0.0.1.xip.io/auth
-FRONT_END_DUMMY_AUTH_URL=https://dummy.127.0.0.1.xip.io/auth
+FRONT_END_AUTH_URL=https://gameon.127.0.0.1.nip.io/auth
+FRONT_END_DUMMY_AUTH_URL=https://dummy.127.0.0.1.nip.io/auth
