--- a/images/util/Dockerfile
+++ b/images/util/Dockerfile
@@ -1,6 +1,6 @@
 FROM gameontext/docker-liberty-custom:master-14
 
-LABEL maintainer="Erin Schnabel <schnabel@us.ibm.com> (@ebullientworks)"
+LABEL maintainer="Erin Schnabel <ebullient@redhat.com> (@ebullientworks)"
 
 ENV SCALA_VERSION 2.12
 ENV KAFKA_VERSION 2.3.0
